Work on the code according to the notes from 09.03.2023

--- a/TODO
+++ b/TODO
@@ -5,3 +5,5 @@ TODO:
 - remove plots in relation to measure time
 - remove variance plots leave standard deviation plot
 - just work on log values
+
+MAKE THE CODE BETTER
