--- a/TODO
+++ b/TODO
@@ -6,4 +6,4 @@ TODO:
 - remove variance plots leave standard deviation plot
 - just work on log values
 
-MAKE THE CODE BETTER
+Make script that creates plot for every instantaneoes freqency value and calculates average correlation coefficent
